[package]
name = "remotro"
version = "0.1.0"
edition = "2024"
description = "A crate allowing remote control of Balatro"
license = "MIT"
repository = "https://github.com/remotro/client"
readme = "README.md"
authors = ["HeadedBranch", "OxygenCobalt"]

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
